[package]
name = "rcat"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.66"
clap = { version = "4.1.8", features = ["derive", "cargo"] }
futures-util = { version = "0.3.27", features = ["sink"] }
humantime-serde = "1.1.1"
log = "0.4.17"
quinn = "0.9.3"
serde = { version = "1.0.155", features = ["derive"] }
serde_qs = "0.12.0"
stderrlog = "0.5.4"
tokio = { version = "1.26.0", features = ["full"] }
tokio-tungstenite = { version = "0.18.0", features = ["rustls", "rustls-tls-webpki-roots"] }
tun = { version = "0.5.5", features = ["async"] }
tungstenite = "0.18.0"
url = { version = "2.3.1", features = ["serde"] }

