[package]
name = "rcat"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
clap = { version = "4.2.5", features = ["derive", "cargo"] }
futures-util = { version = "0.3.27", features = ["sink"] }
humantime-serde = "1.1.1"
log = "0.4.18"
quinn = "0.10.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_qs = "0.12.0"
stderrlog = "0.5.4"
tokio = { version = "1.28.0", features = ["full"] }
tokio-tungstenite = { version = "0.18.0", features = ["rustls", "rustls-tls-webpki-roots"] }
tun = { version = "0.5.5", features = ["async"] }
tungstenite = "0.19.0"
url = { version = "2.3.1", features = ["serde"] }

